<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserPanel.BookHotelAgree">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Add Requirements" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/urlagree"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/finalwdding"/>
            <EditText
                android:id="@+id/weddbook_name"
                style="@style/edittext"
                android:layout_marginTop="10dp"
                android:hint="Full Name"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/weddbook_address"
                style="@style/edittext"
                android:layout_marginTop="10dp"
                android:hint="Address"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/weddingbook_phone"
                style="@style/edittext"
                android:layout_marginTop="10dp"
                android:hint="+92"
                android:inputType="number"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_hotel_menu"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Hotel Menu"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_menu_desc"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_nikah"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nikah"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/nikahbook1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nikah Khawan"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_dj"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dj_desc"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/djbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dj"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_qawaali"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qawwali_desc"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/qawalbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Qawal"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_tailor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tailor_desc"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/talorbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tailor"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_salon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salon_desc"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/sloonbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sloon"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_photographer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photographer_desc"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/photographatbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photographer"/>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm Order"
                android:background="@drawable/rect_btn"
                android:textColor="@color/white"
                android:layout_margin="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>